# e-note

./: .gitignore  README.md
backend/: CMakeLists.txt  CMakePresets.json
backend/src/: main.cpp
backend/src/controller/: CMakeLists.txt  autorController.cpp  autorController.h  notaController.cpp  notaController.h  nota_parser.cpp  nota_parser.h  sCorsMiddleware.h  tagController.cpp  tagController.h
backend/src/dao/: CMakeLists.txt  IAutorDAO.h  ILembreteDAO.h  INotaDAO.h  INotaLinkDAO.h  INotaTagDAO.h  ITagDAO.h  cAutorDAO.cpp  cAutorDAO.h  cConnectionMySQL.cpp  cConnectionMySQL.h  cLembreteDAO.cpp  cLembreteDAO.h  cNotaDAO.cpp  cNotaDAO.h  cNotaLinkDAO.cpp  cNotaLinkDAO.h  cNotaTagDAO.cpp  cNotaTagDAO.h  cTagDAO.cpp  cTagDAO.h
backend/src/domain/: CMakeLists.txt  cAutor.cpp  cAutor.h  cLembrete.cpp  cLembrete.h  cNota.cpp  cNota.h  cNotaLink.cpp  cNotaLink.h  cNotaTag.cpp  cNotaTag.h  cTag.cpp  cTag.h
backend/src/dto/: create_nota_dto.h  nota_response_dto.h  update_nota_dto.h
backend/src/repository/: CMakeLists.txt  INotaRepository.h  cNotaRepository.cpp  cNotaRepository.h
backend/src/service/: CMakeLists.txt  cAutorService.cpp  cAutorService.h  cNotaService.cpp  cNotaService.h  cTagService.cpp  cTagService.h  cTransactionMySQL.h  makeLinkKey.cpp  makeLinkKey.h
backend/src/test/: CMakeLists.txt  test_cAutorDAO.cpp  test_cAutorService.cpp  test_cNotaDAO.cpp  test_connectionMySQL.cpp
backend/src/util/: CMakeLists.txt  uTimePoint.cpp  uTimePoint.h
database/: database_create.sql  db_enote.sql  tb_autor.sql  tb_lembrete.sql  tb_nota.sql  tb_nota_link.sql  tb_tag.sql
diagram/: enote_diagram.drawio
docs/: git.txt  prompt.txt  service.txt  todo.txt
